# ARM-CMSIS-5

./: .gitignore
CMSIS/DSP/: CMakeLists.txt
CMSIS/DSP/BuildCMSISDSPLibs/: CMakeLists.txt
CMSIS/DSP/Toolchain/: GCC.cmake
